// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Fab ENCOURA theme matches the snapshot 1`] = `
<div>
  <button
    aria-label="Floating Icon Button"
    class="MuiButtonBase-root MuiFab-root MuiFab-circular MuiFab-sizeLarge MuiFab-primary MuiFab-root MuiFab-circular MuiFab-sizeLarge MuiFab-primary css-1b5rzbj-MuiButtonBase-root-MuiFab-root"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-10r9l3z-MuiSvgIcon-root"
      data-testid="PlusIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
      />
    </svg>
  </button>
</div>
`;

exports[`Fab ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <button
    aria-label="Floating Icon Button"
    class="MuiButtonBase-root MuiFab-root MuiFab-circular MuiFab-sizeLarge MuiFab-primary MuiFab-root MuiFab-circular MuiFab-sizeLarge MuiFab-primary css-106er0q-MuiButtonBase-root-MuiFab-root"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-10r9l3z-MuiSvgIcon-root"
      data-testid="PlusIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
      />
    </svg>
  </button>
</div>
`;

exports[`Fab ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <button
    aria-label="Floating Icon Button"
    class="MuiButtonBase-root MuiFab-root MuiFab-circular MuiFab-sizeLarge MuiFab-primary MuiFab-root MuiFab-circular MuiFab-sizeLarge MuiFab-primary css-1v3w4y7-MuiButtonBase-root-MuiFab-root"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1efper6-MuiSvgIcon-root"
      data-testid="PlusIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
      />
    </svg>
  </button>
</div>
`;

exports[`Fab ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <button
    aria-label="Floating Icon Button"
    class="MuiButtonBase-root MuiFab-root MuiFab-circular MuiFab-sizeLarge MuiFab-primary MuiFab-root MuiFab-circular MuiFab-sizeLarge MuiFab-primary css-19df9xa-MuiButtonBase-root-MuiFab-root"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-obgb5z-MuiSvgIcon-root"
      data-testid="PlusIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
      />
    </svg>
  </button>
</div>
`;
